maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var (sx, sy) = trouveSortie()
  setIndication(sx,sy,0)
  
  
}

def trouveSortie() : (Int,Int) = {
  
  for (x <- 0 to getMondeLargeur()-1){
  	for (y <- 0 to getMondeHauteur()-1){
      if (aBiscuit(x,y)) {
        var (sx,sy) :(Int,Int) = (x,y)
        return (sx,sy)
      }
    }
  }
  return (0,0)
}

def ecrireCaseAdjacente(x:Int, y:Int, indice:Int){
  if (!aMurNord(x,y)){ setIndication(x, y-1, indice+1)}
  if (!aMurOuest(x,y)){ setIndication(x-1, y, indice+1)}
  if (!aMurNord(x,y+1)){setIndication(x, y+1, indice+1)}
  if (!aMurOuest(x+1,y)){ setIndication(x+1, y, indice+1)}
    
  }
}